--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -896,3 +896,7 @@ h1{
 .footerintro {text-align: center; margin-top: 10px;}
 .footermani {text-align: center; margin-top: 10px;}
 .footermanireg {text-align: center; margin-top: 10px;}
+
+.navname {
+    width: 30px;
+}
