--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -122,6 +122,8 @@
 }
 
 
+
+/*tutorial.blade.php***********************************************************/
 .welcomepro {
 		/* boxレイアウトの指定 */
 		display: box;
@@ -138,25 +140,94 @@
 		margin-left: 260px;
 
 	}
-
-.step{
-    display:inline-block;
-    width:25%;
-	text-align: center;
-	margin-top:200px;
-}
-
+	
 .step img {
        width:25%;
 		text-align: center;
 		margin: 10px;
 }
 
-.step figcaption{
-    font-size: 20px;
-    font-family: 'ABeeZee', sans-serif;
+.welcomepro {
+		/* boxレイアウトの指定 */
+		display: box;
+		display: -webkit-box;
+		display: -moz-box;
+
+		/* 配置したボックスを左右中央寄せにする */
+		box-pack: center;
+		-webkit-box-pack: center;
+		-moz-box-pack: center;
+		
+		
+		margin-top:50px;
+		margin-right:120px;
+		margin-bottom: 50px;
 }
 
+.step{
+    display:inline-block;
+    width:50%;
+	text-align: center;
+	margin-top:0px;
+}
+
+.step p{
+    font-size:20px;
+    width:100%;
+    text-align: center;
+}
+
+.choose{
+    width:35%;
+}
+
+.choose-icon img {
+     width:45%;
+}
+
+
+.check{
+    width:35%;
+}
+
+.check-icon img {
+     width:45%;
+}
+
+
+.Adjust{
+    width:35%;
+}
+
+.adjust-icon img {
+     width:45%;
+}
+
+.btn-tutorial{
+    text-align: center !important;
+    margin-right:0px!important;
+    margin-bottom: 30px;
+    color:  #5b75ad;
+}
+
+.tutorial_btn {
+    font-size: 35px;
+    color: #5b75ad;
+    margin-top: 90px;
+    margin-right: 0px;
+    margin-bottom: 50px;
+}
+
+.tutorial_btn1:hover{
+    color:  #5b75ad;
+}
+
+.tutorial_h1 {
+    margin-top: 50px;
+    font-size:60px;
+    font-weight: bold;
+    color:#5b75ad;
+}
 
 
 
@@ -926,88 +997,6 @@ h1{
 /*  transform: rotate(10deg);*/
 
 
-/*tutorial.blade.php*******************************************************************/
-
-
-
-
-.welcomepro {
-		/* boxレイアウトの指定 */
-		display: box;
-		display: -webkit-box;
-		display: -moz-box;
-
-		/* 配置したボックスを左右中央寄せにする */
-		box-pack: center;
-		-webkit-box-pack: center;
-		-moz-box-pack: center;
-		
-		
-		margin-top:50px;
-		margin-right:120px;
-		margin-bottom: 50px;
-}
-
-.step{
-    display:inline-block;
-    width:50%;
-	text-align: center;
-	margin-top:0px;
-}
-
-.step p{
-    font-size:20px;
-    width:100%;
-    text-align: center;
-}
-
-.choose{
-    width:35%;
-}
-
-.choose-icon img {
-     width:45%;
-}
-
-
-.check{
-    width:35%;
-}
-
-.check-icon img {
-     width:45%;
-}
-
-
-.Adjust{
-    width:35%;
-}
-
-.adjust-icon img {
-     width:45%;
-}
-
-.btn-tutorial{
-    text-align: center !important;
-    margin-right:0px!important;
-    margin-bottom: 30px;
-    
-}
-
-.tutorial_btn {
-    font-size: 35px;
-    color: #5b75ad;
-    margin-top: 90px;
-    margin-right: 0px;
-    margin-bottom: 50px;
-}
-
-.tutorial_h1 {
-    margin-top: 50px;
-    font-size:60px;
-    font-weight: bold;
-    color:#5b75ad;
-}
 
 /*footerたち*/
 .footerwelcome {text-align: center; margin-top: 700px;}
