--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -208,14 +208,15 @@
     margin-right:0px!important;
     margin-bottom: 30px;
     color:  #5b75ad;
+    font-size: 35px;
 }
 
-.tutorial_btn {
+.tutorial_btn1 {
     font-size: 35px;
     color: #5b75ad;
-    margin-top: 90px;
-    margin-right: 0px;
-    margin-bottom: 50px;
+    /*margin-top: 90px;*/
+    /*margin-right: 0px;*/
+    /*margin-bottom: 50px;*/
 }
 
 .tutorial_btn1:hover{
@@ -873,7 +874,7 @@ h1{
 }
 
 .veryhot-tribe:hover:after{
-    content:"Please turn down the AC by 3 degree.";
+    content:"Please turn down the A/C by 3°C.";
     display:block;
     position:fixed;
     left:0;
@@ -891,7 +892,7 @@ h1{
 }
 
 .hot-tribe:hover:after{
-    content:"Please turn down the AC by 2 degree.";
+    content:"Please turn down the A/C by 2°C.";
     display:block;
     position:fixed;
     left:0;
@@ -909,7 +910,7 @@ h1{
 }
 
 .cold-tribe:hover:after{
-    content:"Please turn up the AC by 2 degree.";
+    content:"Please turn up the A/C by 2°C.";
     display:block;
     position:fixed;
     left:0;
@@ -926,7 +927,7 @@ h1{
 }
 
 .verycold-tribe:hover:after{
-    content:"Please turn up the AC by 3 degree.";
+    content:"Please turn up the A/C by 3°C.";
     display:block;
     position:fixed;
     left:0;
@@ -956,56 +957,15 @@ h1{
 
 
 
-/*.clearbtn {*/
-/*    position: relative;*/
-/*    display: inline-block;*/
-/*    font-weight: bold;*/
-/*    padding: 5px 11px 5px 15px;*/
-/*    text-decoration: none;*/
-/*    color: #5b75ad ;*/
-/*    transition: .4s;*/
-/*    margin:0 10px;*/
-/*}*/
-
-/*.clearbtn:before {*/
-/*   position: absolute;*/
-/*   display: inline-block;*/
-/*   content: '';*/
-/*   width: 4px;*/
-/*   height: 100%;*/
-/*   top: 0;*/
-/*   left: 0;*/
-/*   border-radius: 3px;*/
-/*   background:#5b75ad ;*/
-/*}*/
-
-/*.clearbtn:after{*/
-/*   position: absolute;*/
-/*   display: inline-block;*/
-/*   content: '';*/
-/*   width: 4px;*/
-/*   height: 100%;*/
-/*   top:0;*/
-/*   left: 100%;*/
-/*   border-radius: 3px;*/
-/*   background:#5b75ad ;*/
-/*}*/
-
-/*.clearbtn:hover:before,.clearbtn:hover:after{*/
-/*  -webkit-transform: rotate(10deg);*/
-/*  -ms-transform: rotate(10deg);*/
-/*  transform: rotate(10deg);*/
-
-
-
-/*footerたち*/
+/*footerたち*******************************************************************/
 .footerwelcome {text-align: center; margin-top: 700px;}
+.footertutorial {text-align: center; margin-top: 13px;}
 .footerreg {text-align: center; margin-top: 33px;}
 .footerlogin {text-align: center; margin-top: 180px;}
 .footerfeel {text-align: center; margin-top: 185px;}
 .footermap {text-align: center; margin-top: 30px;}
 .footermaps {text-align: center; margin-top: 15px;}
-.footergrah {text-align: center; margin-top: 10px;}
+.footergrah {text-align: center; margin-top: 50px;}
 .footerintro {text-align: center; margin-top: 10px;}
 .footermani {text-align: center; margin-top: 10px;}
 .footermanireg {text-align: center; margin-top: 10px;}
